<resources>
    <string name="app_name">Foody HCMUTE</string>
    <string name="enter_email">Nhập email</string>
    <string name="enter_password">Nhập mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="reset_password">Quên mật khẩu</string>
    <string name="donthave_account">Bạn chưa có tài khoản?</string>
    <string name="signup">Đăng ký</string>
    <string name="enter_name">Nhập tên</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="loading">Đang tải...</string>
    <string name="beverage">Nước uống</string>
    <string name="order">Đặt hàng</string>
    <string name="save">Lưu</string>
    <string name="change_password">Thay đổi mật khẩu</string>
    <string name="logout">Đăng xuất</string>
    <string name="press_back_to_exit">Press back to exit</string>
    <string name="profile">Cá nhân</string>
    <string name="empty_food_list">Food list will appear here</string>
    <string name="empty_beverage_list">Beverage list will appear here</string>
    <string name="empty_order_list">Order list will appear here</string>
    <string name="search">Tìm kiếm</string>
    <string name="email_or_password_incorrect">Email or Mật khẩu không chính xác</string>
    <string name="email_invalidate">Email không hợp lệ</string>
    <string name="password_mismatch">Mật khẩu không chính xác</string>
    <string name="permission_required">Access permission is required</string>
    <string name="server_error">Server error : %1$s</string>
    <string name="change_password_succesfully">Thay đổi mật khẩu thành công</string>
    <string name="sign_up_successfully">Đăng ký thành công!</string>
    <string name="sign_up_failed">Đăng ký thất bại : %1$s</string>
    <string name="update_profile_successfully">Cập nhật thông tin cá nhân thành công</string>
    <string name="update_profile_failed">Cập nhật thông tin cá nhân thất bại</string>
    <string name="change_picture">Thay đổi ảnh</string>
    <string name="remove_picture">Xóa ảnh</string>
    <string name="add_to_cart_successfully">Thêm vào giỏ hàng thành công</string>
    <string name="add_to_cart_failed">Thêm vào giỏ hàng thất bại</string>
    <string name="update_to_cart_successfully">Cập nhật giỏ hàng thành công</string>
    <string name="update_to_cart_failed">Cập nhật giỏ hàng thất bại</string>
    <string name="notification">Thông báo</string>
    <string name="remove_order">Bạn có muốn xóa sản phẩm này ra khỏi giỏ hàng không?</string>
    <string name="remove_food_success">Xóa sản phẩm ra khỏi giỏ hàng thành công</string>
    <string name="remove_food_failed">Xóa sản phẩm thất bại</string>
    <string name="empty_comment_list">Comment empty list</string>
    <string name="cart">Cart</string>
    <string name="add_food">Thêm sản phẩm</string>
    <string name="list_food">Danh sách sản phẩm</string>
    <string name="list_payments">Credit Cards</string>
    <string name="kind_of_food">Loại sản phẩm</string>
    <string name="food">Food</string>
    <string name="enter_food_name">Nhập tên sản phẩm</string>
    <string name="enter_food_description">Nhập mô tả</string>
    <string name="enter_food_price">Nhập giá</string>
    <string name="cancel">Hủy</string>
    <string name="confirm">Xác nhận</string>
    <string name="buy">Mua</string>
    <string name="enter_phone">Nhập số điện thoại</string>
    <string name="enter_address">Nhập địa chỉ</string>
    <string name="phone_number_already_exists">Số điện thoại đã tồn tại! Vui lòng nhập lại</string>
    <string name="remember_me">Remember me</string>
    <string name="card_momo">Ví MoMo</string>
    <string name="card_zalo">Zalo Pay</string>
    <string name="card_master_card">Master Card</string>
    <string name="no_have_payment">Chưa chọn phương thức thanh toán</string>
    <string name="changed_payment_successfully">Thay đổi phương thức thanh toán thành công</string>
    <string name="no_choose_product_type">You need to choose a product type</string>
    <string name="insert_food_successfully">Thêm sản phẩm thành công</string>
    <string name="update_food_successfully">Cập nhật sản phẩm thành công</string>
    <string name="home">Home</string>
    <string name="comment">COMMENT</string>
    <string name="add_comment">Thêm bình luận</string>
    <string name="insert_comment_successfully">Thêm bình luận thành công</string>
    <string name="empty_list_order">You do not have any items in your shopping cart</string>
    <string name="enter_message">Nhập tin nhắn</string>
    <string name="update_comment_successfully">Cập nhật tin nhắn thành công</string>
    <string name="delete_comment_successfully">Xóa tin nhắn thành công</string>
    <string name="payment_success">Thanh toán thành công</string>
    <string name="empty_notification_list">empty list notification</string>
    <string name="restaurant">restaurant</string>
    <string name="remove_food_successfully">Xóa sản phẩm thành công</string>
</resources>